sad final commit

--- a/index.html
+++ b/index.html
@@ -38,13 +38,6 @@
                     <button class="btn" id="searchButton">Search</button>
                 </form>
             </div>
-            
-            <!-- Franklin's
-                <div class="first">
-                <input type="text" id="artistSearch" placeholder="Search an artist">
-                <input type="text" id="songSearch" placeholder="Search a song">
-                <button class="btn" id="searchButton">Find</button>
-            </div> -->
         </div>
     </form> 
 
@@ -56,7 +49,7 @@
             <div class="square">
                 <div id="albumCover">
                     <!-- This is for the album art -->
-                    <img src="../../../plant photos/004.png">
+                    <img src="">
                 </div>
             </div>
             <div id="musicAndLyrics">
@@ -66,17 +59,7 @@
                 </div>
                 <!-- Lyrics -->
                 <div id="lyrics">
-                    <p>these are the lyrics? Lorem ipsum dolor 
-                        sit amet consectetur adipisicing elit. 
-                        Tempore, ab doloremque, odit esse eos 
-                        provident voluptate quisquam mollitia 
-                        dolorem incidunt cum voluptates earum. 
-                        Necessitatibus repellendus ex molestiae 
-                        distinctio modi aliquid, natus architecto 
-                        sint eveniet nemo expedita doloribus harum 
-                        sunt temporibus quam? Assumenda deleniti 
-                        doloribus id consequuntur officiis? Libero, 
-                        a. Distinctio?</p>
+                    <p></p>
                 </div>
             </div>
         </div>
@@ -91,5 +74,8 @@
             integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" 
             crossorigin="anonymous"></script>
     <script src="./assets/js/franklin_script.js"></script>
+    <script src="./app.js"></script>
+    <script src="./develop/deezer script.js"></script>
+    <script src="./develop/genius tracks.js"></script>
 </body>
 </html>
