--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         </div>
         <div class="inputs">
             <div class="container first">
-                <h2>Search lyric</h2>
+                <h2>Search artist or song:</h2>
                 <form id="form" >
                     <input type="text" id="search" placeholder="Enter artist name or song title...">
                     <button class="btn" id="searchButton">Search</button>
@@ -43,8 +43,11 @@
 
     <main>
         <div class="musicBox">
-            <div class="result" id="result">
-                <h3>Search results</h3>                
+            <div>
+                <h3>Search results</h3>
+                <div class="result" id="result">
+                    <!-- This is for search results -->
+                </div>                
             </div>
             <div class="square">
                 <div id="albumCover">
