connected lyric API

--- a/index.html
+++ b/index.html
@@ -52,17 +52,19 @@
             <div class="square">
                 <div id="albumCover">
                     <!-- This is for the album art -->
-                    <img src="">
+                    <img src="./assets/Lana-Del-Rey-Chemtrails-Over-the-Country-Club.jpg">
                 </div>
             </div>
             <div id="musicAndLyrics">
                 <div>
                     <!-- Song Title -->
-                    <h3 id="songTitle">Lyrics</h3>
+                    <h3 id="songTitle"></h3>
                 </div>
                 <!-- Lyrics -->
-                <div id="lyrics">
-                    <p></p>
+                <div>
+                    <p id="">
+                        
+                    </p>
                 </div>
             </div>
         </div>
